// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Enum Types No Defaults 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <app-enums>
    <div>
      <div>
        unionType: 
      </div>
      <div>
        aliasedUnionType: 
      </div>
      <div>
        enumNumeric: 
      </div>
      <div>
        enumNumericInitial: 
      </div>
      <div>
        enumStrings: 
      </div>
      <div>
        enumAlias: 
      </div>
    </div>
  </app-enums>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Enum Types With Defaults 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <app-enums>
    <div>
      <div>
        unionType: union a
      </div>
      <div>
        aliasedUnionType: Type Alias 1
      </div>
      <div>
        enumNumeric: 
      </div>
      <div>
        enumNumericInitial: 1
      </div>
      <div>
        enumStrings: PRIMARY
      </div>
      <div>
        enumAlias: 
      </div>
    </div>
  </app-enums>
</storybook-dynamic-app-root>
`;
